dark-mode issue on mobile fixed

--- a/styles/modern-normalize.css
+++ b/styles/modern-normalize.css
@@ -23,8 +23,8 @@ Use a better box model (opinionated).
 
 html {
   line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-  text-size-adjust: 100%;
+  /* -webkit-text-size-adjust: 100%;  */
+  /* text-size-adjust: 100%; */
   -moz-tab-size: 4; /* 3 */
   tab-size: 4; /* 3 */
 }
